--- a/example/src/main/res/layout/ssl_warning_dialog.xml
+++ b/example/src/main/res/layout/ssl_warning_dialog.xml
@@ -3,20 +3,22 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+              android:padding="8dp">
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp"
         android:textSize="16sp"
         android:text="Do you want to trust the following certificate?"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="8dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:id="@+id/text_certificate"/>
+        android:id="@+id/text_certificate"
+        android:layout_margin="8dp" />
 
 </LinearLayout>
