--- a/example/src/main/res/layout/signin_dialog.xml
+++ b/example/src/main/res/layout/signin_dialog.xml
@@ -18,6 +18,13 @@
         android:layout_margin="4dp"
         android:hint="Password"/>
     <EditText
+        android:id="@+id/twostep"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:hint="Two Step code"/>
+    <EditText
         android:id="@+id/url"
         android:inputType="textUri"
         android:layout_width="match_parent"
