New _Set display name_ button in the example app

--- a/example/src/main/res/layout/activity_example.xml
+++ b/example/src/main/res/layout/activity_example.xml
@@ -51,9 +51,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign Out"
-            android:layout_below="@+id/update_first_site"
-            android:layout_toRightOf="@+id/log_sites"
+            android:layout_below="@+id/account_infos_button"
             />
+
+        <Button
+            android:id="@+id/account_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Set Display Name"
+            android:enabled="false"
+            android:layout_above="@+id/signout"
+            android:layout_toRightOf="@+id/log_sites"
+            android:layout_toEndOf="@+id/log_sites" />
 
     </RelativeLayout>
 
