--- a/example/src/main/res/layout/activity_example.xml
+++ b/example/src/main/res/layout/activity_example.xml
@@ -6,62 +6,65 @@
     android:orientation="vertical"
     tools:context="org.wordpress.android.stores.example.MainExampleActivity">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-        <Button
-            android:id="@+id/list_sites_button"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign In And Fetch Sites" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/account_infos_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:text="Fetch Account"
-            android:layout_alignParentLeft="false"
-            android:layout_alignParentStart="false"
-            android:layout_alignParentRight="false"
-            android:layout_below="@+id/list_sites_button" />
+            <Button
+                android:id="@+id/new_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create New Account"
+                android:layout_weight="1" />
 
-        <Button
-            android:id="@+id/update_first_site"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:text="Fetch first site"
-            android:layout_toRightOf="@+id/list_sites_button"
-            android:layout_toEndOf="@+id/list_sites_button" />
+            <Button
+                android:id="@+id/list_sites_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sign In And Fetch Sites" />
 
-        <Button
-            android:id="@+id/log_sites"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Log Sites"
-            android:layout_toRightOf="@+id/account_infos_button"
-            android:layout_toEndOf="@+id/account_infos_button"
-            android:layout_below="@+id/list_sites_button" />
+            <Button
+                android:id="@+id/account_infos_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:text="Fetch Account" />
 
-        <Button
-            android:id="@+id/signout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sign Out"
-            android:layout_below="@+id/update_first_site"
-            android:layout_toRightOf="@+id/log_sites"
-            />
+            <Button
+                android:id="@+id/update_first_site"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:text="Fetch first site" />
 
-    </RelativeLayout>
+            <Button
+                android:id="@+id/log_sites"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Log Sites" />
 
+            <Button
+                android:id="@+id/signout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sign Out"
+                />
+
+        </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:id="@+id/log"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp"/>
+        android:layout_gravity="bottom"
+        android:layout_margin="4dp"
+        android:layout_weight="3" />
 
 </LinearLayout>
