--- a/example/src/main/res/layout/signin_dialog.xml
+++ b/example/src/main/res/layout/signin_dialog.xml
@@ -4,24 +4,21 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
     <EditText
-        android:id="@+id/username"
-        android:inputType="textEmailAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:hint="Username" />
-    <EditText
-        android:id="@+id/password"
+        android:id="@+id/text1"
         android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:hint="Password"/>
+        android:layout_margin="4dp"/>
     <EditText
-        android:id="@+id/url"
-        android:inputType="textUri"
+        android:id="@+id/text2"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:hint="XMLRPC URL"/>
+        android:layout_margin="4dp"/>
+    <EditText
+        android:id="@+id/text3"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"/>
 </LinearLayout>
