Finally dropped the  method that doesn't make sense at this level of the library - the app should manage this

--- a/example/src/main/res/layout/activity_example.xml
+++ b/example/src/main/res/layout/activity_example.xml
@@ -66,7 +66,7 @@
                 android:id="@+id/signout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign Out"
+                android:text="Sign Out from WPCOM"
                 />
 
         </LinearLayout>
