Adding button to example project for future testing of Media Store

--- a/example/src/main/res/layout/activity_example.xml
+++ b/example/src/main/res/layout/activity_example.xml
@@ -66,8 +66,13 @@
                 android:id="@+id/signout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign Out from WPCOM"
-                />
+                android:text="Sign Out from WPCOM" />
+
+            <Button
+                android:id="@+id/all_media"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fetch All Media" />
 
         </LinearLayout>
     </ScrollView>
