--- a/example/src/main/res/layout/activity_example.xml
+++ b/example/src/main/res/layout/activity_example.xml
@@ -74,6 +74,12 @@
                 android:layout_height="wrap_content"
                 android:text="Fetch All Media" />
 
+            <Button
+                android:id="@+id/media"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fetch Listed Media" />
+
         </LinearLayout>
     </ScrollView>
 
