--- a/instaflux/src/main/res/layout/activity_main.xml
+++ b/instaflux/src/main/res/layout/activity_main.xml
@@ -5,12 +5,39 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="56dp"
     tools:context="org.wordpress.android.fluxc.instaflux.MainInstafluxActivity">
+
+    <EditText
+        android:id="@+id/username"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:hint="@string/username"/>
+
+    <EditText
+        android:id="@+id/password"
+        android:inputType="textPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:hint="@string/password"/>
+
+    <EditText
+        android:id="@+id/url"
+        android:inputType="textUri"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:hint="@string/xmlrpc_url"/>
 
     <Button
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in" />
+        android:layout_gravity="center"
+        android:layout_marginTop="32dp"
+        android:text="@string/sign_in"/>
 
 </LinearLayout>
