--- a/instaflux/src/main/res/values/colors.xml
+++ b/instaflux/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
 <resources>
 
     <color name="wp_blue">#0087be</color>
+    <color name="hint_color">#a8bece</color>
+    <color name="transparent_black">#33000000</color>
 
 </resources>
