--- a/instaflux/src/main/res/values/styles.xml
+++ b/instaflux/src/main/res/values/styles.xml
@@ -5,10 +5,23 @@
     <style name="Instaflux" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:background">@color/wp_blue</item>
         <item name="buttonStyle">@style/FlatButtonStyle</item>
+        <item name="android:textViewStyle">@style/TextStyle</item>
+        <item name="editTextStyle">@style/EditTextStyle</item>
     </style>
 
     <style name="FlatButtonStyle" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:background">@color/transparent_black</item>
         <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="TextStyle" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="backgroundTint">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColorHint">@color/hint_color</item>
     </style>
 
 </resources>
