--- a/example/src/main/res/layout/fragment_account.xml
+++ b/example/src/main/res/layout/fragment_account.xml
@@ -5,5 +5,16 @@
               android:orientation="vertical"
               tools:context="org.wordpress.android.fluxc.example.AccountFragment">
 
+    <Button
+        android:id="@+id/account_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set Display Name" />
+
+    <Button
+        android:id="@+id/account_infos_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fetch Account" />
 
 </LinearLayout>
