--- a/example/src/main/res/layout/fragment_posts.xml
+++ b/example/src/main/res/layout/fragment_posts.xml
@@ -5,5 +5,22 @@
               android:orientation="vertical"
               tools:context="org.wordpress.android.fluxc.example.PostsFragment">
 
+    <Button
+        android:id="@+id/fetch_first_site_posts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fetch posts from first site" />
+
+    <Button
+        android:id="@+id/create_new_post_first_site"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create a new post on first site" />
+
+    <Button
+        android:id="@+id/delete_a_post_from_first_site"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete a post from first site" />
 
 </LinearLayout>
