like or unlike comment in the example

--- a/example/src/main/res/layout/fragment_comments.xml
+++ b/example/src/main/res/layout/fragment_comments.xml
@@ -21,6 +21,6 @@
         android:id="@+id/like_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Like first comment" />
+        android:text="Like/Unlike first comment" />
 
 </LinearLayout>
