New signed out example to test IS_WPCOM_URL action

--- a/example/src/main/res/layout/fragment_signed_out_actions.xml
+++ b/example/src/main/res/layout/fragment_signed_out_actions.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         android:text="Send Magic Link E-mail" />
 
+    <Button
+        android:id="@+id/check_url_wpcom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Check if URL is WPCom site (or Jetpack)" />
+
 </LinearLayout>
