New delete site action in the example app

--- a/example/src/main/res/layout/fragment_sites.xml
+++ b/example/src/main/res/layout/fragment_sites.xml
@@ -23,4 +23,10 @@
         android:layout_height="wrap_content"
         android:text="Log Sites" />
 
+    <Button
+        android:id="@+id/delete_first_site"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="⚠️️ Delete First Site ⚠️️" />
+
 </LinearLayout>
