New SiteStore action to get domain name suggestions

--- a/example/src/main/res/layout/fragment_signed_out_actions.xml
+++ b/example/src/main/res/layout/fragment_signed_out_actions.xml
@@ -23,4 +23,10 @@
         android:layout_height="wrap_content"
         android:text="Check if URL is WPCom site (or Jetpack)" />
 
+    <Button
+        android:id="@+id/domain_suggestions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Domain suggestions" />
+
 </LinearLayout>
