--- a/example/src/main/res/layout/fragment_signed_out_actions.xml
+++ b/example/src/main/res/layout/fragment_signed_out_actions.xml
@@ -29,4 +29,10 @@
         android:layout_height="wrap_content"
         android:text="Domain suggestions" />
 
+    <Button
+        android:id="@+id/connect_site_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Connect Site Info" />
+
 </LinearLayout>
