--- a/example/src/main/res/layout/fragment_main.xml
+++ b/example/src/main/res/layout/fragment_main.xml
@@ -77,4 +77,10 @@
         android:layout_height="wrap_content"
         android:text="Taxonomies" />
 
+    <Button
+        android:id="@+id/themes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Themes" />
+
 </LinearLayout>
