--- a/example/src/main/res/layout/fragment_themes.xml
+++ b/example/src/main/res/layout/fragment_themes.xml
@@ -33,7 +33,8 @@
     <EditText
         android:id="@+id/theme_id"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="Enter the theme's id here" />
 
     <Button
         android:id="@+id/activate_theme_wpcom"
